# STRLRobotics

./: .gitignore  .gitmodules  LICENSE  README.md
BT_task_manager/communication_msgs/: CMakeLists.txt  package.xml
BT_task_manager/communication_msgs/action/: OpenSeeDSetter.action
BT_task_manager/strategic_node/: .gitignore  README.md
BT_task_manager/strategic_node/docker/: Dockerfile  build.sh  into.sh  run_test.sh  run_tree.sh  start.sh  stop.sh
control/control_mobile_robot/: CMakeLists.txt  package.xml
control/control_mobile_robot/action/: Control.action  Control_(coordinates).action  Simulatecollision.action
control/control_mobile_robot/config/: config_real.yaml
control/control_mobile_robot/include/: Controller.h  libController.h
control/control_mobile_robot/launch/: control.launch  control_action.launch  control_draft.launch  control_mpcl4c.launch  detection_collision.launch
control/control_mobile_robot/src/: main.cpp  main_action.cpp  main_detection_collision.cpp  main_l4c.cpp
control/mpc_planner/: CMakeLists.txt  MPC_LOCAL_PALNNER.rviz  env.sh  package.xml
control/mpc_planner/config_params/: ros_parameters.yaml  solver_parameters.yaml
control/mpc_planner/include/: MPC_Planner.h  MPC_ROS_Utils.h  ROS_Node.h  lib.h  types.h
control/mpc_planner/launch/: node.launch
control/mpc_planner/scripts/: acados_solver.json  create_solver.py  robot_model.py  test_solver.py
control/mpc_planner/scripts/c_generated_code/: Makefile  acados_sim_solver_robot_model.c  acados_sim_solver_robot_model.h  acados_solver.pxd  acados_solver_robot_model.c  acados_solver_robot_model.h  acados_solver_sfunction_robot_model.c  main_robot_model.c  main_sim_robot_model.c  make_sfun_robot_model.m
control/mpc_planner/scripts/c_generated_code/robot_model_constraints/: robot_model_constraints.h
control/mpc_planner/scripts/c_generated_code/robot_model_cost/: robot_model_cost.h  robot_model_cost_y_0_fun.c  robot_model_cost_y_0_fun.h  robot_model_cost_y_0_fun_jac_ut_xt.c  robot_model_cost_y_0_hess.c  robot_model_cost_y_e_fun.c  robot_model_cost_y_e_fun.h  robot_model_cost_y_e_fun_jac_ut_xt.c  robot_model_cost_y_e_hess.c  robot_model_cost_y_fun.c  robot_model_cost_y_fun.h  robot_model_cost_y_fun_jac_ut_xt.c  robot_model_cost_y_hess.c
control/mpc_planner/scripts/c_generated_code/robot_model_model/: robot_model_expl_ode_fun.c  robot_model_expl_vde_adj.c  robot_model_expl_vde_forw.c  robot_model_model.h
control/mpc_planner/src/: MPC_Planner.cpp  MPC_ROS_Utils.cpp  main.cpp
geom/: .rosinstall.bak
llm_sorter/: README.md  environment.yml  pyproject.toml  run.sh  test.py
llm_sorter/config/: sorter_planner.yaml
llm_sorter/data/: .gitignore  alfred.dvc  hlp.dvc  llp.dvc
llm_sorter/docker/: compose.yaml  dockerfile.model  dockerfile.planner
llm_sorter/docs/commands/: build.sh
llm_sorter/docs/source/: conf.py  index.rst  llm_sorter.datasets.rst  llm_sorter.environment.rst  llm_sorter.gen_methods.rst  llm_sorter.infrastructure.rst  llm_sorter.metrics.rst  llm_sorter.models.rst  llm_sorter.processors.rst  llm_sorter.rst
llm_sorter/docs/source/intro/: installation.rst  llm_models.rst  plan_generation_methods.rst  planner_structure.rst
llm_sorter/generate_tests/: generate_clean_room_tests.py  generate_hlp_tests.py  generate_llp_tests.py  generate_valid_check_tests.py
llm_sorter/llm_model/: base_model.py  model.py  requirements.txt  server.py
llm_sorter/llm_sorter/: __init__.py  agent_planner.py  sorter_planner.py  test_alfred_planner.py  test_alfred_task_type_checker.py  test_clean_room.py  test_hlp_planner.py  test_llp_planner.py  test_spec_planner.py  test_valid_check.py
llm_sorter/llm_sorter/datasets/: __init__.py  alfred.py  base.py  hlp.py  llp.py  sorter.py
llm_sorter/llm_sorter/environment/: __init__.py  base.py
llm_sorter/llm_sorter/gen_methods/: __init__.py  base_gen.py  full_gen.py
llm_sorter/llm_sorter/infrastructure/: __init__.py  config.py  logger.py
llm_sorter/llm_sorter/metrics/: __init__.py  base_metrics.py  lcs_metrics.py
llm_sorter/llm_sorter/models/: __init__.py  api_model.py  base_model.py
llm_sorter/llm_sorter/processors/: __init__.py  alfred_task_checker_processor.py  base_processor.py  clean_room_processor.py  hlp_processor.py  llp_processor.py  serialization.py  spec_processor.py  utils.py  valid_check_processor.py
llm_sorter/prompts/: .gitignore  hlp.dvc  llp.dvc  spec.dvc  valid_check.dvc
llm_sorter/prompts/clean_room/: clean_room.txt
llm_sorter/prompts/hlp/: hlp_prompt-old.txt  hlp_prompt.txt
llm_sorter/prompts/llp/: prompt.txt  vicuna_prompt.txt
llm_sorter/prompts/spec/: spec_prompt.txt  spec_prompt_with_none.txt  vicuna_prompt.txt
llm_sorter/prompts/valid_check/: valid_check.txt  valid_check_1.txt  valid_check_good copy - old .txt  valid_check_good copy.txt  valid_check_good.txt  valid_check_unvalid.txt
llm_sorter/tests/test_processors/: test_utils.py
manipulator/src/: README.md
manipulator/src/aruco_localization_v2/: CMakeLists.txt  README.md  package.xml
manipulator/src/communication_msgs/: CMakeLists.txt
manipulator/src/meshes/: 2F85_Opened_20190924.stl  CMakeLists.txt  package.xml
manipulator/src/objects_manipulation_v2/: CMakeLists.txt  README.md  setup.py  (+2 more)
manipulator/ur5_shortcuts/: dump_traj.py  fold_the_robot.py  gripper.py  know_your_pose.py  play_demo.py  set_freedrive.py
planning/ThetaStarROS/: CMakeLists.txt  package.xml
planning/ThetaStarROS/include/theta_star_planner/: const.hpp  environment_options.hpp  geom.hpp  line_of_sight.hpp  map.hpp  theta_star.hpp
planning/ThetaStarROS/launch/: find_object_action_server.launch  from_rviz.launch  location_nav_action_server.launch  move_to_action_server.launch  move_to_action_server_grid_with_objects.launch  point_nav.launch  point_nav_action_server.launch
planning/ThetaStarROS/maps/: Untitled.ipynb  first.yaml  second.yaml
planning/ThetaStarROS/src/: environment_options.cpp  geom.cpp  map.cpp  path_planner.cpp  path_test.cpp  theta_star.cpp
planning/tx2_action_server/: CMakeLists.txt  README.md  package.xml
skillbot_segmentation/: README.md
(+166 files in other folders)
